# benchmarking-dataset-factory

./: .env  .gitattributes  .gitignore  .gitmodules  README.md  addressee.csv  addressee_with_splits.csv  children-metadata.csv  children-metadata_datasets_summary.csv  children.csv  datasets_metadata_addressee.csv  datasets_metadata_transcription.csv  datasets_summary.csv  final_vtc.csv  makefile  metadata_addressee.csv  metadata_transcription.csv  metadata_vcm.csv  metadata_vtc.csv  pyproject.toml  table_corpora_info.csv  table_corpora_info_transcription_has_transcription.csv  table_corpora_info_vtc_has_speaker_type.csv  tox.ini  transcription.csv  transcription_with_splits.csv  vcm.csv  vcm_with_splits.csv  vtc_splits.csv
.datalad/: config
metadata/: datasets.json
outputs/: manually_annotated_metadata.json
outputs/human_annotation_data/: human_annotation_data-babylogger-vs-lena-data.json  human_annotation_data-bergelson.json  human_annotation_data-cougar.json  human_annotation_data-fausey-trio.json  human_annotation_data-forrester.json  human_annotation_data-israel-natovich.json  human_annotation_data-japanese-tsuji2024.json  human_annotation_data-lucid.json  human_annotation_data-lyon.json  (+20 more)
scripts/: .gitattributes  children_metadata.py  create_dataset.py  create_table_corpora_info.py  datasets_metadata.py  find_files_on_filter_expression.py  find_on_filter_expression.py  get_human_annotation_metadata.py  get_splits.py  graph_dataset_distribution.py  split_data.py  validate_manual_metadata.py  validate_metannots.py
static/: dataset_readme.md  get_splits.py
(+33 files in other folders)
