[project]
name = "benchmarking_data_2025"
version = "0.1.0"
description = "Dataset for benchmarking data available to the LAAC"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "childproject>=0.4.3",
    "pandas>=2.3.3",
    "pyannote-core>=6.0.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
]


[tool.black]
line-length = 88
target-version = ["py313"]


[tool.isort]
profile="black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true


[tool.mypy]
exclude = '^datasets/'


[[tool.mypy.overrides]]
module = [
    'ChildProject.projects',
    'ChildProject.annotations',
]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
